# stonktop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .stonktop-tech.toml  .stonktop.toml  ACCESSIBILITY.md  ACCESSIBILITY_IMPLEMENTATION.md  ALERT_PERSISTENCE.md  ALERT_PERSISTENCE_SESSION.md  API_PARALLELIZATION.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_INDEX.md  PERFORMANCE_IMPROVEMENTS.md  README.md  RUST_2024_MODERNIZATION.md  RUST_2024_UPGRADE_SUMMARY.md  TECHNICAL_INDICATORS.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: api.rs  app.rs  audio.rs  cli.rs  config.rs  export.rs  main.rs  models.rs  modernization.rs  ui.rs
tests/: integration_test.rs
